vendor/structopt-0.3.21/tests/ui/skip_with_other_options.stderr
error: methods are not allowed for skipped fields
 --> $DIR/skip_with_other_options.rs:8:17
  |
8 |     #[structopt(skip, long)]
  |                 ^^^^
